kubernetes/kube-prometheus-stack/templates/alertmanager/ingress.yaml
---
# Source: kube-prometheus-stack/templates/alertmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-stack-alertmanager
  namespace: monitoring
  labels:
    app: kube-prometheus-stack-alertmanager
    
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/version: "46.6.0"
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-46.6.0
    release: "kube-prometheus-stack"
    heritage: "Helm"
spec:
  rules:
    - host: alertmanager.hoangnd.freeddns.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
